@@ -1,4 +1,4 @@
-[![Actions Status](https://github.com/tbrowder/Windows-Test/actions/workflows/windows.yml/badge.svg)](https://github.com/tbrowder/Windows-Test/actions)
+[![Actions Status](https://github.com/tbrowder/Windows-Test/actions/workflows/windows-spec.yml/badge.svg)](https://github.com/tbrowder/Windows-Test/actions)
 
 NAME
 ====
@@ -16,6 +16,8 @@ DESCRIPTION
 ===========
 
 **Windows::Test** is intended to provide a comprehensive set of Windows OS system components for Gitbub Workflows testing of any Raku module on Github-provided Windows computer.
+
+A copy of the Github workflows Windows test YAML file is in this directory for ease of reference for prospective users.
 
 Users are encouraged to file an issue anytime this module's `/.github/workflows/windows.yml` file doesn't work for your module. Please include a link to the problem repository on [https://github.com](https://github.com).
 
