@@ -8,7 +8,7 @@ filename = docs/README.rakudoc
 [Badges]
 ;provider = github-actions/linux.yml
 ;provider = github-actions/macos.yml
-provider = github-actions/windows.yml
+provider = github-actions/windows-spec.yml
 
 [PruneFiles]
 ; if you want to prune files when packaging, then
