@@ -18,6 +18,9 @@ B<Windows::Test> is intended to provide a comprehensive
 set of Windows OS system components for Gitbub Workflows
 testing of any Raku module on Github-provided Windows computer.
 
+A copy of the Github workflows Windows test YAML file is in this directory
+for ease of reference for prospective users.
+
 Users are encouraged to file an issue anytime this module's
 C</.github/workflows/windows.yml> file doesn't work for your
 module. Please include a link to the problem repository
