@@ -1,6 +1,8 @@
 Revision history for Windows-Test
 
 {{$NEXT}}
+    - Rename the yml file to highlight its temporary nature
+    - Place a copy of the yml file in the home directory for easy refernce
 
 0.0.2  2023-03-21T09:50:37-05:00
     - Add a TODO section in the README
